# bytewords

./: Makefile  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/bytewords_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: bytewords.podspec
lib/: bytewords.dart  bytewords_bindings_generated.dart
lib/src/: bytewords_base.dart  wordlist.dart
linux/: CMakeLists.txt
macos/: bytewords.podspec
macos/Classes/: bytewords.c
src/: CMakeLists.txt  bytewords.c  bytewords.h
test/: bytewords_test.dart
windows/: CMakeLists.txt
